# terraform-with-terratest

./: README.md
.github/workflows/: test.yml
images/loadbalancer/: generate-config.py  loadbalancer.pkr.hcl  pyproject.toml  update-config.service  update-config.sh  update-config.timer
images/tags-web-server/: Dockerfile  pyproject.toml  tags-file-generator.py  tags-web-server.pkr.hcl  tags-web-server.service  tags-web-server.sh
main/: main.tf  output.tf
main/tagged-ec2-s3/: main.tf
main/tags-web-server/: main.tf  output.tf  variable.tf
modules/ec2/: main.tf  variable.tf
modules/ec2-cluster/: alb.tf  main.tf  output.tf  security_group.tf  variable.tf
modules/ec2-instance-linked-profile/: main.tf  output.tf  variable.tf
modules/loadbalancer/: main.tf  output.tf  variable.tf
modules/s3/: main.tf  variable.tf
modules/vpc/: main.tf  output.tf  variable.tf
test/: go.mod  go.sum  hello_world_test.go  main_test.go  tagged_ec2_s3_test.go  tags_cluster_test.go
