[tool.poetry]
name = "loadbalancer"
version = "0.1.0"
description = ""
authors = ["jfmrm <jfmrm@cin.ufpe.br>"]

[tool.poetry.dependencies]
python = "^3.5"
boto3 = "^1.17.4"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
